# x02

./: .gitignore
Modules/Engine/: ARCHITECTURE.md
Modules/Engine/csv_reader/: Cargo.toml
Modules/Engine/docs/: consolidation_summary.md
Modules/Engine/docs_engine_ffi/: Cargo.toml
Modules/Engine/docs_parser_ffi/: Cargo.toml
Modules/Engine/docx_reader/: Cargo.toml  README.md  pubspec.yaml
Modules/Engine/docx_reader/examples/: basic_usage.rs  extract_all.rs
Modules/Engine/docx_reader/src/: commands.rs  content_model.rs  images.rs  lib.rs  schema.rs  serialize.rs
Modules/Engine/docx_reader/src/v2/: error.rs  lib.rs  metadata.rs  models.rs  parser.rs  styles.rs
Modules/Engine/docx_reader/src/v3/: lib.rs
Modules/Engine/docx_reader/tests/: integration_tests.rs
Modules/Engine/docx_reader_ffi/: Cargo.toml  pubspec.yaml
Modules/Engine/docx_reader_ffi/src/: lib.rs
Modules/Engine/ods_reader/: Cargo.toml
Modules/Engine/office_animation/: Cargo.toml  pubspec.yaml
Modules/Engine/office_chart/: Cargo.toml  pubspec.yaml
Modules/Engine/office_common/: Cargo.toml  pubspec.yaml
Modules/Engine/office_common/src/: lib.rs
Modules/Engine/office_common/src/shape/: lib.rs
Modules/Engine/office_common/src/table/: lib.rs
Modules/Engine/office_core/: pubspec.yaml
Modules/Engine/office_multimedia/: Cargo.toml  pubspec.yaml
Modules/Engine/pptx_reader/: Cargo.toml  pptx_reader_ffi.h
Modules/Engine/pptx_reader_ffi/: Cargo.toml
Modules/Engine/rich_doc/: Cargo.toml  README.md
Modules/Engine/rich_doc/core/: Cargo.toml
Modules/Engine/rich_doc/core/src/: agent.rs  tests.rs  transaction.rs  tree.rs
Modules/Engine/slide_engine_ffi/: Cargo.toml
Modules/Engine/slide_engine_ffi/src/: lib.rs
Modules/Engine/svg_reader/: Cargo.toml
Modules/Engine/xlsx_reader/: Cargo.toml  README.md  xlsx_reader.h
Modules/Engine/xlsx_reader/benches/: throughput.rs
Modules/Engine/xlsx_reader/examples/: advanced_extract.rs  basic_read.rs  streaming.rs
Modules/Engine/xlsx_reader/src/: ast.rs  cell.rs  lib.rs  ops.rs  session.rs
Modules/Engine/xlsx_reader/src/core/: error.rs  iter.rs
Modules/Engine/xlsx_reader/src/ops/: snapshot.rs  tests.rs  types.rs
Modules/Engine/xlsx_reader/src/xlsx/: export.rs  mod.rs
Modules/Engine/xlsx_reader/src/xlsx/error/: conversion.rs  tests.rs
Modules/Engine/xlsx_reader/src/xlsx/grid/: cell_conversion.rs  export.rs  import.rs  tests.rs  writer_conversion.rs
Modules/Engine/xlsx_reader/src/xlsx/import/: options.rs  summary.rs  tests.rs
Modules/Engine/xlsx_reader/src/xlsx/session/: tests.rs
Modules/Engine/xlsx_reader/src/xlsx/workbook_session/tests/: mod.rs
Modules/Engine/xlsx_reader/tests/: facade_contract.rs
Modules/flutter_rich_doc/: pubspec.yaml
Modules/flutter_rich_doc/lib/: rich_doc_flutter.dart
Modules/ky_ai_mcp/: IMPLEMENTATION_COMPLETE.md  README.md  agent.md  pubspec.yaml  skills.md
Modules/ky_ai_mcp/example/: main.dart
Modules/ky_ai_mcp/lib/: ky_ai_mcp.dart
Modules/ky_ai_mcp/test/: ky_ai_mcp_test.dart
Modules/ky_docs/: README.md  pubspec.yaml
Modules/ky_docs/docs/: AUTO_SAVE_IMPLEMENTATION.md  COMPLETE_IMPLEMENTATION_GUIDE.md  FILE_MENU_IMPLEMENTATION.md  FILE_MENU_INTEGRATION_FIX.md  FINAL_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  IMPORT_EXPORT_GUIDE.md  IMPROVEMENTS.md  IMPROVEMENT_PLAN.md  INSERT_MENU_IMPLEMENTATION.md  INTEGRATION_COMPLETE_SUMMARY.md  MIGRATION_GUIDE.md  MISSING_FEATURES_ANALYSIS.md  NATIVE_ENGINE_EXAMPLE.md  QUICK_START_IMPORT_EXPORT.md  SAMPLE_DOCUMENT_TEST_GUIDE.md
Modules/ky_docs/lib/: ky_docs.dart
Modules/ky_docs/test/: document_controller_factory_test.dart  document_export_service_test.dart  document_find_replace_regex_test.dart  document_import_preview_analyzer_test.dart  document_import_service_test.dart  document_lifecycle_orchestration_service_test.dart  document_style_preset_enhanced_test.dart  waraq_document_bridge_test.dart  waraq_pdf_extraction_mapper_test.dart  waraq_quill_document_mapper_test.dart
Modules/ky_office_core/test/: ky_office_core_test.dart
Modules/ky_print/: INTEGRATION_GUIDE.md  README.md  pubspec.yaml
Modules/ky_print/example/: main.dart
Modules/ky_print/lib/: ky_print.dart
Modules/ky_sheet/: pubspec.yaml
Modules/ky_slide/: ARCHITECTURE_IMPROVEMENTS.md  MASTER_SLIDE_IMPLEMENTATION.md  TRANSITIONS_IMPLEMENTATION.md  pubspec.yaml
Office/: README.md
Plugins/ky_ai_mcp/: IMPLEMENTATION_COMPLETE.md  skills.md
Plugins/ky_docs/: AUTO_SAVE_IMPLEMENTATION.md  COMPLETE_IMPLEMENTATION_GUIDE.md  FILE_MENU_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  IMPORT_EXPORT_GUIDE.md  IMPROVEMENTS.md  IMPROVEMENT_PLAN.md  INTEGRATION_COMPLETE_SUMMARY.md  MIGRATION_GUIDE.md  MISSING_FEATURES_ANALYSIS.md  README.md  pubspec.yaml
Plugins/ky_print/: INTEGRATION_GUIDE.md  README.md
Plugins/ky_sheet/: ARCHITECTURE_REFACTORING.md  CORE_ENHANCEMENTS.md
Plugins/ky_slide/: ARCHITECTURE_IMPROVEMENTS.md  PRESENTER_VIEW_IMPROVEMENTS.md  TRANSITIONS_IMPLEMENTATION.md  pubspec.yaml
worksuite_ui/: pubspec.yaml
worksuite_ui/lib/: main.dart  worksuite_workspace.dart
(+508 files in other folders)
