[package]
name = "docs_engine_ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]
name = "docs_engine_ffi"

[dependencies]
docs_engine = { path = "../docs_engine" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
cbindgen = "0.26.0"
