[package]
name = "docx_reader"
version = "0.1.0"
edition = "2021"
description = "A comprehensive .docx reader, editor, and writer library for Rust with MS Word compatibility"
license = "MIT"
keywords = ["docx", "word", "document", "extract", "reader", "editor", "office"]

[lib]
name = "docx_reader"
crate-type = ["rlib"]
path = "lib.rs"

[dependencies]
# Core parsing
zip = { version = "=0.6.3", default-features = false, features = ["deflate"] }
quick-xml = "=0.30.0"
thiserror = "=1.0.50"
base64 = "=0.21.5"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
htmlescape = "=0.3.1"
uuid = { version = "1.0", features = ["v4"] }

# Common office libraries
office_common = { path = "../office_common" }
office_core = { path = "../office_core" }
office_multimedia = { path = "../office_multimedia" }
office_chart = { path = "../office_chart" }
office_animation = { path = "../office_animation" }

[dev-dependencies]
tempfile = "=3.8.1"


