[package]
name = "docx_reader_ffi"
version = "1.0.0"
edition = "2021"
description = "Rust FFI library for high-performance DOCX/DOC parsing"
license = "MIT"

[lib]
name = "docx_reader_ffi"
crate-type = ["cdylib", "staticlib"]

[dependencies]
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip = "0.6"
quick-xml = { version = "0.31", features = ["serialize"] }

[profile.release]
opt-level = 3
lto = true