[package]
name = "ky_docs_parser_ffi"
version = "0.1.0"
edition = "2021"
description = "FFI bindings for DOCX parser integration with ky_docs"

[lib]
crate-type = ["cdylib", "staticlib"]
name = "ky_docs_parser_ffi"

[dependencies]
docx_reader = { path = "../../Parser/Core/ky-of-docx" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
cbindgen = "0.26.0"