[package]
name = "ky_docs_parser_ffi"
version = "0.1.0"
edition = "2021"
description = "FFI bindings for DOCX parser integration with ky_docs"

[lib]
crate-type = ["cdylib", "staticlib"]
name = "ky_docs_parser_ffi"

[dependencies]
docx_reader = { path = "../docx_reader" }
office_common = { path = "../office_common" }
office_core = { path = "../office_core" }
office_multimedia = { path = "../office_multimedia" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }

[build-dependencies]
cbindgen = "0.26.0"