[package]
name = "slide_engine_ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
slide_engine = { path = "../slide_engine" }
ky_of_pptx = { path = "../../Parser/Core/ky-of-pptx" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = "0.6"
base64 = "0.21"
