[package]
name = "xlsx_reader"
version = "0.1.0"
edition = "2021"
description = "Spreadsheet engine with a sparse matrix grid and formula evaluation DAG"

[dependencies]
rustc-hash = "1.1" # Fast hashmap for sparse matrix
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0"
office_common = { path = "../library/office_common" }


printpdf = { version = "0.3", optional = true }
base64 = "0.22"
calamine = { version = "=0.21.2", features = ["dates"] }
chrono = { version = "0.4", features = ["serde"] }
indexmap = { version = "2", features = ["serde"] }
log = "0.4"
meval = "0.2"
quick-xml = "0.30"
serde_json = { version = "1", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
thiserror = "1"
zip = "0.6"
office_common = { path = "office_common", optional = true }
